stable version for master

--- a/ietf/templates/codematch/index.html
+++ b/ietf/templates/codematch/index.html
@@ -38,7 +38,7 @@
 		   <div style="margin: 20px 0 ">
 			<i class="fa fa-star" style="font-size: 30px; float: left; padding-top:5px"></i>
 			<p style="padding-left: 44px">
-			<a href="{% url "ietf.codematch.accounts.views.top_coders" %}"> Coders Hall-of-Fame</a><br />
+			<a href="{% url "ietf.codematch.accounts.views.top_coders" %}"> Top Coders</a><br />
 			The stars of IETF CodeMatch!</p>
 		  </div>
 		  </div>
