optimizing codematch master

--- a/ietf/templates/codematch/accounts/topcoders.html
+++ b/ietf/templates/codematch/accounts/topcoders.html
@@ -47,7 +47,7 @@
                                     {% for count, coder in topcoders %}
 	                               		<li>
 	                                    	<!-- Title and date -->
-	                                    	<h5><a href="#">{{ coder.name }}</a> - {{ count }} Codings</h5>
+	                                    	<h5><a href="#">{{ coder }}</a> - {{ count }} Codings</h5>
 	                                	</li>
                                     {% endfor %}
                                 </ul>
