--- a/ietf/templates/codematch/requests/show.html
+++ b/ietf/templates/codematch/requests/show.html
@@ -109,8 +109,8 @@
 
 							{% if docs %}
 								<h4><strong>Documents</strong></h4>
-								{% for doc in docs %}
-									{{ doc.document.group }}: <a href="https://datatracker.ietf.org/doc/{{doc.name}}"> {{ doc.name }} </a>
+								{% for docname, gname, gparentname in docs %}
+									{{ gname }}: <a href="https://datatracker.ietf.org/doc/{{doc.name}}"> {{ docname }} </a>
 									<br />
 								{% endfor %}
 								<br />
