--- a/ietf/templates/codematch/matches/list.html
+++ b/ietf/templates/codematch/matches/list.html
@@ -32,7 +32,6 @@
         <!-- Page heading ends -->
 
         <!-- Matter -->
-
         <div class="matter">
             <div class="container">
 
@@ -67,11 +66,11 @@
                             <div class="padd">
                                 <ul class="latest-news">
                             	{% if codings %}
-                                	{% for coding, projectcontainer, coder in codings %}
+                                	{% for coding, projectcontainer, coder, isOwner in codings %}
 	                               		<li>
 	                                    	<!-- Title and date -->
 	                                    	<h5><a href="{% url 'show' projectcontainer.id coding.id %}">{{ coding.title }}</a> <span>by</span> <a href="#">{{ coder }}</a>
-            		                      	{% if user.is_authenticated and coder == owner %}
+            		                      	{% if user.is_authenticated and isOwner %}
 					                   			<a class="label label-info" href="{% url 'ietf.codematch.matches.views.edit' projectcontainer.id coding.id %}" style="margin-left: 30px"><i class="fa fa-pencil"></i> Edit</a>
 							               		<a class="label label-warning" href="#" ><i class="fa fa-folder"></i> Archive</a>
 											{% endif %}
@@ -112,6 +111,7 @@
 	                                    	</p>
 	                                	</li>
                                 	{% endfor %}
+					</ul>
                                 {% else %}
 								<div class="alert alert-info" style="margin: 5px;">
 								    <p align="center">
@@ -119,7 +119,6 @@
 								    </p>
 							    </div>
 								{% endif %}
-                                </ul>
                             </div>
                             <div class="widget-foot">
                                 <p class="buttonlist">
@@ -131,7 +130,17 @@
                                 {% endif %}
                              	{% if state != ""%}
                  					<a class="btn btn-default" href="{% url 'ietf.codematch.views.back' %}">Back</a>
-                 				{% endif %}
+                				{% endif %}
+				<ul class="pagination">
+  <li><a href="#">&laquo;</a></li>
+  <li><a href="#">1</a></li>
+  <li><a class="active" href="#">2</a></li>
+  <li><a href="#">3</a></li>
+  <li><a href="#">4</a></li>
+  <li><a href="#">5</a></li>
+  <li><a href="#">6</a></li>
+  <li><a href="#">&raquo;</a></li>
+</ul>
                                 </p>
                             </div>
                         </div>
