--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1851,3 +1851,26 @@ footer .copy{
 	padding: 50px 0 20px 50px;
 	background:#eee url("../images/main-back.png") repeat;
 }
+
+
+ul.pagination {
+    display: inline-block;
+    margin: 0;
+}
+
+ul.pagination li {display: inline;float: left;}
+
+ul.pagination li a {
+    color: black;
+    float: left;
+    padding: 8px 16px;
+    text-decoration: none;
+    transition: background-color .3s;
+}
+
+ul.pagination li a.active {
+    background-color: #4CAF50;
+    color: white;
+}
+
+ul.pagination li a:hover:not(.active) {background-color: #ddd;}
