--- a/ietf/templates/codematch/requests/edit.html
+++ b/ietf/templates/codematch/requests/edit.html
@@ -123,7 +123,7 @@
 										{% if canadddocuments %}
 											{{ docform }}
 											{% csrf_token %}
-											<input type="submit" value="Add related Document" />
+											<input type="submit" name="button_doc" value="Add related Document" />
 										{% endif %}
 
 										<br />
@@ -144,7 +144,7 @@
 										{% if canaddcontact %}
 											{{ contactform }}
 											{% csrf_token %}
-											<input type="submit" value="Add contact" />
+											<input type="submit" name="button_contact" value="Add contact" />
 										{% endif %}
 
 										<br />
@@ -168,7 +168,7 @@
 											<label>Tag:</label>
 											{{ tagform.name }}
 											{% csrf_token %}
-											<input type="submit" value="Add new Tag" />
+											<input type="submit" name="button_tag" value="Add new Tag" />
 										{% endif %}
 
 									</form>
@@ -182,7 +182,7 @@
 						   		<div class="widget-foot">
                                 <p class="buttonlist">
                                 	<div class="col-xs-offset-1" style="margin-left: 0px">
-								    	<input type="submit" name="save" class="btn btn-primary" value="Update" />
+								    	<input type="submit" name="button_save" class="btn btn-primary" value="Update" />
 										<a class="btn btn-default" href="{% url 'ietf.codematch.views.back' %}">Cancel</a>
                                 	</div>
                                 </p>
