--- a/ietf/templates/codematch/requests/new.html
+++ b/ietf/templates/codematch/requests/new.html
@@ -119,7 +119,7 @@
 										</div>
 										{{ docform }}
 										{% csrf_token %}
-										<input type="submit" value="Add related Document" />
+										<input type="submit" name="button_doc" value="Add related Document" />
 
 										<br />
 										<br />
@@ -139,7 +139,7 @@
 										{% if canaddcontact %}
 											{{ contactform }}
 											{% csrf_token %}
-											<input type="submit" value="Add contact" />
+											<input type="submit" name="button_contact" value="Add contact" />
 										{% endif %}
 
 										<br />
@@ -162,7 +162,7 @@
 										<label>Tag:</label>
 										{{ tagform.name }}
 										{% csrf_token %}
-										<input type="submit" value="Add new Tag" />
+										<input type="submit" name="button_tag" value="Add new Tag" />
 									</form>
 									<br />
 									{% endif %}
@@ -172,7 +172,7 @@
 						   		<div class="widget-foot">
 	                                <p class="buttonlist">
 	                                	<div class="col-xs-offset-1" style="margin-left: 0px">
-								    		<input type="submit" name="save" class="btn btn-primary" value="Submit" />
+								    		<input type="submit" name="button_save" class="btn btn-primary" value="Submit" />
 											<a class="btn btn-default" href="{% url 'ietf.codematch.views.back' %}">Cancel</a>
 	                                	</div>
 	                                </p>
