Fix CodeMatch in login.html

--- a/ietf/templates/codestand/accounts/login.html
+++ b/ietf/templates/codestand/accounts/login.html
@@ -18,7 +18,7 @@
 
 <!-- Logo. -->
 <div class="logo" align="center">
-	<h1><a href="#">IETF Code<span class="bold">Match</span></a></h1>
+	<h1><a href="#">IETF Code<span class="bold">Stand</span></a></h1>
 	<p class="meta">Accelerating the implementation of new protocols</p>
 </div>
   <!-- Logo ends -->
