--- a/ietf/templates/codestand/requests/edit.html
+++ b/ietf/templates/codestand/requests/edit.html
@@ -11,6 +11,17 @@
 {% block pagehead %}
   <link rel="stylesheet" href="{% static 'css/lib/select2.css' %}">
   <link rel="stylesheet" href="{% static 'css/lib/select2-bootstrap.css' %}">
+  <style>
+	#id_title { width: 300px; }
+	#id_description { width: 300px; }
+	#id_protocol { width: 300px; }
+	#id_estimated_lof { width: 200px; }
+	#id_additional_information { width: 300px; }
+	#s2id_id_doc { width: 400px; margin-bottom: 10px; }
+	#id_contact { width: 200px; margin-left: 10px; margin-right: 10px; }
+	#id_type { margin-left: 10px; margin-right: 10px; }
+	#id_name { width: 200px; margin-left: 10px; margin-right: 10px; }
+  </style>
 {% endblock %}
 
 {% block content %}
@@ -58,19 +69,19 @@
                            	{% csrf_token %}
                             <div class="padd">
 								<div class="form-group">
-									<label class="control-label col-xs-2">Title:</label>
+									<label class="control-label col-xs-2">Title*:</label>
 									<div class="col-xs-4">
 										{{ projform.title }}
 									</div>
 								</div>
 								<div class="form-group">
-									<label class="control-label col-xs-2">Protocol:</label>
+									<label class="control-label col-xs-2">Protocol*:</label>
 									<div class="col-xs-4">
 										{{ projform.protocol }}
 									</div>
 								</div>
 								<div class="form-group">
-									<label class="control-label col-xs-2">Description:</label>
+									<label class="control-label col-xs-2">Description*:</label>
 									<div class="col-xs-4">
 										{{ projform.description }}
 									</div>
@@ -104,8 +115,8 @@
 								</div>
 
 								<br />
-
-								<div>
+								
+								<div class="padd">
 									{% if user.is_authenticated %}
 									<form action="{% url 'ietf.codestand.requests.views.edit' projectcontainer.id %}" method="post">
 										<div>
@@ -164,7 +175,7 @@
 			            				<div>
 										<br />
 										{% if canaddtags %}
-											<label >*tags may be related to events, dates, protocols or other relative subject.</label><br />
+											<label >tags may be related to events, dates, protocols or other relative subject.</label><br />
 											<label>Tag:</label>
 											{{ tagform.name }}
 											{% csrf_token %}
@@ -178,6 +189,11 @@
 								</div>
 
 								<br />
+
+				<div>
+					<p>(*) Denotes a required field.</p>
+					<div class="clearfix"></div>
+				</div>
 
 						   		<div class="widget-foot">
                                 <p class="buttonlist">
