--- a/ietf/templates/codestand/accounts/login.html
+++ b/ietf/templates/codestand/accounts/login.html
@@ -54,7 +54,7 @@
                 </div>
 
                 <div class="widget-foot">
-                  Not Registred? <a href="{% url 'ietf.codestand.accounts.views.register' %}">Register here</a>
+                  Not Registred? <a target="_blank" href="https://datatracker.ietf.org/accounts/create/">Register here</a>
                 </div>
             </div>
       </div>
