--- a/ietf/templates/codestand/requests/show.html
+++ b/ietf/templates/codestand/requests/show.html
@@ -110,7 +110,7 @@
 							{% if docs %}
 								<h4><strong>Documents</strong></h4>
 								{% for docname, gname, gparentname in docs %}
-									{{ gname }}: <a href="https://datatracker.ietf.org/doc/{{docname}}"> {{ docname }} </a>
+									{{ gname }}: <a target="_blank" href="https://datatracker.ietf.org/doc/{{docname}}"> {{ docname }} </a>
 									<br />
 								{% endfor %}
 								<br />
