one file was missing

--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -3331,8 +3331,9 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .navbar-default .navbar-text {
   color: #777777;
 }
+<!-- TODO: Matheus corrigir -->
 .navbar-default .navbar-nav > li > a {
-  color: #777777;
+  color: white;
 }
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus {
